# python-project-template

./: CHANGELOG.md  CONTRIBUTING.md  README.md  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  pylinter.yml  pytest.yml  pytester-cov.yml  python-CI.yml  python-app.yml
src/project_name/: __init__.py
test/: test_main.py
tests/: test_main.py  test_project_name.py
