[metadata]
name = example-package
version = 0.0.1
author = Tom Gooding
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TomJGooding/python-project-template
project_urls =
    Bug Tracker = https://github.com/TomJGooding/python-project-template/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
